--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <h1>Cordel Moderno</h1>
-        <p>Por Milton Duarte</p>
+        <p>Por <a href="">Milton Duarte</a></p>
 
         <p>
             Estou ficando cansado
